...
    
    override open func viewDidLoad() {
        super.viewDidLoad()
        NotificationCenter.default.addObserver(self, selector: #selector(EnablePushViewController.didRegisterUserNotificationSettings(_:)), name: NSNotification.Name(rawValue: OTRUserNotificationsChanged), object: nil)
        self.skipButton?.setTitle(SKIP_STRING(), for: .normal)
        self.enablePushButton?.setTitle(ENABLE_PUSH_STRING(), for: .normal)
        self.skipButton?.accessibilityIdentifier = "EnablePushViewSkipButton"
    }
    
    @IBAction func enablePushPressed(_ sender: AnyObject) {
        hud = MBProgressHUD.showAdded(to: view, animated: true)
        PushController.setPushPreference(.enabled)
        PushController.registerForPushNotifications()
...
